# propella-annotation

./: .gitignore  README.md  pyproject.toml
src/dynaword/: __init__.py  annotation_config.py  annotations.py  paths.py  propella.py  upload_annotations.py
src/tests/: test_annotations.py  test_upload_annotations.py
